2016-06-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* Makefile.am (bin_PROGRAMS): Add an independent 'parsetexi' 
	executable again.  This will be useful for finding bugs with 
	valgrind. 

2016-05-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* context_stack.c: Implement region stack.

2016-05-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (mark_and_warn_invalid): Implement.

2016-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi.pm: Remove commented-out code to use other methods 
	of getting data from C code.

2016-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* texi2any-2-C.pl: Remove file.

2016-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (process_remaining_on_line): Handle nested @macro.

2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* Makefile.am: Disable standalone parsetexi program, as building it
	doesn't work.
	* command_data.awk: Fix command data for commands given by 
	backslash escapes.

2016-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Replace MakeMaker build system with automake/libtool one, copied 
	from XSParagraph.
	* Parsetexi: Remove subdirectory.
	* Parsetexi/Parsetexi.xs,
	* Parsetexi/lib/Parsetexi.pm: Move to top level.

2015-12-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* commands.h (CF_global, CF_global_unique): New flags.

2015-12-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* errors.c (command_warnf, command_errorf): Implement.

2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* separator.c (remove_empty_content_arguments): Implement.

2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (parse_text): Use new function input_push_text_with_line_nos
	to keep track of line numbers (for tests).

2015-11-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
	* Parsetexi/lib/Parsetexi.pm (parser): Set conf keys on parser 
	object.

2015-11-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parse_texi_text): Add function.
