@@ -1,2 +1,2 @@
-char *text_convert (ELEMENT *e);
 char *convert_to_normalized (ELEMENT *label);
+char *convert_to_texinfo (ELEMENT *e);
